tests/error/comptime_arg_errors/unsupported_ty.py
from guppylang import guppy
from guppylang.std.builtins import comptime


@guppy
def main(n: int @comptime) -> None:
    pass


guppy.compile(main)
